refactor: remove phone and contact address fields, change notes title to varchar
