# docs/swagger.json
@@ -36,7 +36,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server_http.RefreshTokenRequest"
+                            "$ref": "#/definitions/github_com_baobei23_goapp_cmd_server_http.RefreshTokenRequest"
                         }
                     }
                 ],
@@ -46,13 +46,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/server_http.BaseResponse"
+                                    "$ref": "#/definitions/github_com_baobei23_goapp_cmd_server_http.BaseResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/server_http.RefreshTokenResponse"
+                                            "$ref": "#/definitions/github_com_baobei23_goapp_cmd_server_http.RefreshTokenResponse"
                                         }
                                     }
                                 }
@@ -62,13 +62,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/server_http.ErrorResponse"
+                            "$ref": "#/definitions/github_com_baobei23_goapp_cmd_server_http.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/server_http.ErrorResponse"
+                            "$ref": "#/definitions/github_com_baobei23_goapp_cmd_server_http.ErrorResponse"
                         }
                     }
                 }
@@ -94,7 +94,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server_http.LoginRequest"
+                            "$ref": "#/definitions/github_com_baobei23_goapp_cmd_server_http.LoginRequest"
                         }
                     }
                 ],
@@ -104,13 +104,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/server_http.BaseResponse"
+                                    "$ref": "#/definitions/github_com_baobei23_goapp_cmd_server_http.BaseResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/server_http.LoginResponse"
+                                            "$ref": "#/definitions/github_com_baobei23_goapp_cmd_server_http.LoginResponse"
                                         }
                                     }
                                 }
@@ -120,13 +120,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/server_http.ErrorResponse"
+                            "$ref": "#/definitions/github_com_baobei23_goapp_cmd_server_http.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/server_http.ErrorResponse"
+                            "$ref": "#/definitions/github_com_baobei23_goapp_cmd_server_http.ErrorResponse"
                         }
                     }
                 }
@@ -152,7 +152,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server_http.RegisterRequest"
+                            "$ref": "#/definitions/github_com_baobei23_goapp_cmd_server_http.RegisterRequest"
                         }
                     }
                 ],
@@ -162,7 +162,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/server_http.BaseResponse"
+                                    "$ref": "#/definitions/github_com_baobei23_goapp_cmd_server_http.BaseResponse"
                                 },
                                 {
                                     "type": "object",
@@ -178,19 +178,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/server_http.ErrorResponse"
+                            "$ref": "#/definitions/github_com_baobei23_goapp_cmd_server_http.ErrorResponse"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/server_http.ErrorResponse"
+                            "$ref": "#/definitions/github_com_baobei23_goapp_cmd_server_http.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/server_http.ErrorResponse"
+                            "$ref": "#/definitions/github_com_baobei23_goapp_cmd_server_http.ErrorResponse"
                         }
                     }
                 }
@@ -356,7 +356,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/server_http.BaseResponse"
+                                    "$ref": "#/definitions/github_com_baobei23_goapp_cmd_server_http.BaseResponse"
                                 },
                                 {
                                     "type": "object",
@@ -372,19 +372,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/server_http.ErrorResponse"
+                            "$ref": "#/definitions/github_com_baobei23_goapp_cmd_server_http.ErrorResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/server_http.ErrorResponse"
+                            "$ref": "#/definitions/github_com_baobei23_goapp_cmd_server_http.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/server_http.ErrorResponse"
+                            "$ref": "#/definitions/github_com_baobei23_goapp_cmd_server_http.ErrorResponse"
                         }
                     }
                 }
@@ -485,14 +485,9 @@
             "required": [
                 "email",
                 "fullName",
-                "password",
-                "phone"
+                "password"
             ],
             "properties": {
-                "contactAddress": {
-                    "type": "string",
-                    "maxLength": 255
-                },
                 "email": {
                     "type": "string",
                     "maxLength": 255
@@ -504,9 +499,6 @@
                 "password": {
                     "type": "string",
                     "minLength": 8
-                },
-                "phone": {
-                    "type": "string"
                 }
             }
         },
@@ -603,14 +595,9 @@
             "required": [
                 "email",
                 "fullName",
-                "password",
-                "phone"
+                "password"
             ],
             "properties": {
-                "contactAddress": {
-                    "type": "string",
-                    "maxLength": 255
-                },
                 "email": {
                     "type": "string",
                     "maxLength": 255
@@ -622,9 +609,6 @@
                 "password": {
                     "type": "string",
                     "minLength": 8
-                },
-                "phone": {
-                    "type": "string"
                 }
             }
         },
@@ -654,9 +638,6 @@
         "users.User": {
             "type": "object",
             "properties": {
-                "contactAddress": {
-                    "type": "string"
-                },
                 "email": {
                     "type": "string"
                 },
@@ -664,9 +645,6 @@
                     "type": "string"
                 },
                 "id": {
-                    "type": "string"
-                },
-                "phone": {
                     "type": "string"
                 }
             }
